2006-01-07  SHIBATA Tomohisa  <shibata@kahua.org>

	* Release 0.3.5

2006-01-06  SHIBATA Tomohisa  <shibata@kahua.org>

	* test/persistence.scm:
	Added multi mixin-metaclass test.

	* src/kahua/persistence.scm:
	Changed to call next-method in compute-get-n-set of <kahua-persistent-meta>.
	Added kahua-wrapper? proc.


2005-12-30  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm, test/entry-method.scm.in:
	Added set-gsid proc which restore worker's global session by matching id.

	* test/Makefile.in
	Renamed *.scm.in file to *.scm
	
2005-12-29  SHIBATA Tomohisa  <shibata@kahua.org>

	* doc/Modules/kahua.persistence.ja:
	Added persistent-initialize method document.

	* src/kahua/persistence.scm:
	Added persistent-initialize method to <kahua-persistent-base>.

	* test/persistence.scm.in:
	Added initialize and persistent-initialize method test.

2005-12-26  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/test/worker.scm:
	added header->sxml and test/send&pick.
	Changed make-match&pick to save query.

	* src/kahua/server.scm:
	Added redirect/cont.
	Fixed remote-cont fragment.

	* test/Makefile.in, test/redirectcont.kahua, test/redirectcont.scm.in:
	Added redirect/cont test.

2005-12-25  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added <entry-method> and entry-specializer.

	* src/kahua/server.scm:
	changed define-entry-method macro to syntax.
	made define-entry-method kahua-current-entry-name safe.

2005-12-24  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/server.scm:
	Added define-entry-method.

	* test/Makefile.in, test/entry-method.kahua, test/entry-method.scm.in:
	Added entry-method test.

	* src/kahua/persistence.scm:
	Fixed error loop.

2005-12-23  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm, src/kahua/server.scm:
	Supported transaction rollback.
	Added <with-db-error> and raise-with-db-error.
	Changed persistent class read-syncer to :auto
	Added kahua-db-write-id-counter method.
